--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -12,43 +12,51 @@
       color: #37b6bd !important;
     }
 
-    .post-preview {
-      margin-bottom: 24px;
-      display: flex;
-    }
-
-    .post-preview p {
-      font-weight: 400;
-      line-height: 20px;
-    }
-
-    .post-preview span {
-      margin: 12px;
-      font-weight: 600;
-      color: #000;
-    }
-
-    .post-preview small {
-      color: #999;
-      font-weight: 200;
-      font-size: 12px;
-    }
-
-    .post-preview img {
-      float: left;
-      width: 44px;
-      margin-right: 12px;
-      border-radius: 50%;
-    }
-
-    .text-green {
-      color: #0f949b;
-    }
-
     .text-blue {
       color: blue;
     }
 
+    .reply-box {
+      margin-bottom: 40px;
+    }
+
+    .reply-box p {
+      font-size: 15px;
+      line-height: 27px;
+      margin-bottom: 0px;
+    }
+
+    .reply-box img {
+      width: 24px;
+      border-radius: 50%;
+      margin-right: 6px;
+    }
+
+    .reply-box span {
+      margin: 8px;
+      font-weight: 600;
+      color: #000;
+    }
+
+    .message-bubble input {
+      border: none !important;
+      box-shadow: none !important;
+      background: #f6f6f6;
+      height: 30px;
+      margin: 0px;
+      padding: 0px;
+    }
+
+    .message-bubble textarea {
+      font-size:14px;
+      font-weight:200;
+      min-height:80px;
+      resize:none;
+      border:none;
+      background:#f6f6f6;
+      box-shadow:none;
+      padding:0px;
+    }
   </style>
 </head>
 
@@ -83,7 +91,7 @@
 
   				<div class="messages-container margin-top-0">
   					<div class="messages-headline">
-              <h4>Comment Title</h4>
+              <h4>{{comment.title}}</h4>
   					</div>
 
   					<div class="messages-container-inner">
@@ -91,94 +99,59 @@
   						<!-- Message Content -->
   						<div class="message-content">
                 <div class="message-bubble margin-bottom-60">
-  								<div class="message-avatar"><img style="width:44px;height:44px" src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=70" alt="" /></div>
-  								<div class="message-text" style="margin-left:60px">
-                    <p>
-                      Hi fellow indie hackers,
-                      <br /><br />
-                      I have a business idea for which most of you are the target audience, so I wanted to get some feedback.
-                      <br /><br />
-                      I’m guessing most of you who have developed tech products spent a good amount of time initially setting up the project and writing a lot of boilerplate code (like user authentication, payment, connection to DB, connection to email account, integration with Docker, easy deployment to AWS/Heroku/DO, logging, etc.)
-                      <br /><br />
-                      So my solution is to offer a online setup wizard, or via a CLI tool, that will let you easily setup your backend with a stack of technologies of your choice, i.e. your choice of language, library (express for node, flask for python), your choice of DB, IDE, etc.
-                    </p>
+  								<div class="message-avatar">
+                    <img style="width:44px;height:44px" src="{{{comment.profile.image}}}=s96-c" alt="" />
+                  </div>
+  								<div class="message-text margin-left-60">
+                    <p>{{comment.text}}</p>
+                    <hr />
+                    <div style="text-align:right">
+                      <small>submitted by
+                        <a class="text-blue" href="#">{{comment.profile.username}}</a>
+                        <span style="margin:8px">·</span>3 hours ago
+                      </small>
+                    </div>
                   </div>
   							</div>
 
                 <hr />
                 <div class="message-bubble margin-bottom-60">
-  								<div class="message-avatar"><img style="width:44px;height:44px" src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=70" alt="" /></div>
-  								<div class="message-text" style="margin-left:60px">
-                    <textarea style="font-size:14px;font-weight:200;min-height:80px;resize:none;border:none;background:#f6f6f6;box-shadow:none;padding:0px" placeholder="Enter your comment..."></textarea>
+  								<div class="message-avatar">
+                    <img style="width:44px;height:44px" src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=70" alt="" />
+                  </div>
+                  <div class="message-text margin-left-60">
+                    <textarea placeholder="Enter your comment..."></textarea>
                     <div style="text-align:right"><button class="button" style="padding:0px 9px;border-radius:3px;margin:0px">Submit Reply</button></div>
                   </div>
   							</div>
 
-                <div class="post-preview">
-                  <div style="flex:15">
-                    <a href="#">
-                      <img src="https://lh3.googleusercontent.com/CuEfj955nT_eoHDAgH7m70-IpC4jFnN4XElxLr66N7TB1f8xInOfMpYPiDlG7Oxlw9eSl8zGmRLGme2TIGsxYfg7=s96-c" alt="" />
-                    </a>
-                    <p>
-                      <a class="text-green" href="#">Hello, I'm Andrew, in the process of founding Opplaud.com.</a>
-                      <br />
-                      <small>submitted by
-                        <a class="text-blue" href="#">Dkwon</a>
-                        <span>·</span>3 hours ago
-                        <span>·</span>10 comments
-                      </small>
-                    </p>
-                  </div>
-                  <div style="flex:1;text-align:right;max-width:30px;line-height:16px">
-                    <a href="#"><i class="sl sl-icon-arrow-up"></i></a>
-                    <div style="padding-right:2px">11</div>
-                    <a href="#"><i class="sl sl-icon-arrow-down"></i></a>
-                  </div>
+                <div class="reply-box">
+                  <a href="#">
+                    <img src="https://lh3.googleusercontent.com/CuEfj955nT_eoHDAgH7m70-IpC4jFnN4XElxLr66N7TB1f8xInOfMpYPiDlG7Oxlw9eSl8zGmRLGme2TIGsxYfg7=s96-c" alt="" />
+                  </a>
+                  <small>
+                    by <a class="text-blue" href="#">Dkwon</a>
+                    <span>·</span>
+                    3 hours ago
+                  </small>
+                  <p class="margin-top-10">
+                    I’m guessing most of you who have developed tech products spent a good amount of time initially setting up the project and writing a lot of boilerplate code (like user authentication, payment, connection to DB, connection to email account, integration with Docker, easy deployment to AWS/Heroku/DO, logging, etc.)
+                  </p>
                 </div>
 
-                <div class="post-preview">
-                  <div style="flex:15">
-                    <a href="#">
-                      <img src="https://lh3.googleusercontent.com/CuEfj955nT_eoHDAgH7m70-IpC4jFnN4XElxLr66N7TB1f8xInOfMpYPiDlG7Oxlw9eSl8zGmRLGme2TIGsxYfg7=s96-c" alt="" />
-                    </a>
-                    <p>
-                      <a class="text-green" href="#">Hello, I'm Andrew, in the process of founding Opplaud.com. Hello, I'm Andrew, in the process of founding Opplaud.com.</a>
-                      <br />
-                      <small>submitted by
-                        <a class="text-blue" href="#">Dkwon</a>
-                        <span>·</span>3 hours ago
-                        <span>·</span>10 comments
-                      </small>
-                    </p>
-                  </div>
-                  <div style="flex:1;text-align:right;max-width:30px;line-height:16px">
-                    <a href="#"><i class="sl sl-icon-arrow-up"></i></a>
-                    <div style="padding-right:2px">11</div>
-                    <a href="#"><i class="sl sl-icon-arrow-down"></i></a>
-                  </div>
+
+                <div class="reply-box">
+                  <img style="width:24px;border-radius:50%" src="https://lh3.googleusercontent.com/CuEfj955nT_eoHDAgH7m70-IpC4jFnN4XElxLr66N7TB1f8xInOfMpYPiDlG7Oxlw9eSl8zGmRLGme2TIGsxYfg7=s96-c" alt="" />
+                  <small>
+                    by <a class="text-blue" href="#">Dkwon</a>
+                    <span>·</span>
+                    3 hours ago
+                  </small>
+                  <p class="margin-top-10">
+                    I’m guessing most of you who have developed tech products spent a good amount of time initially setting up the project and writing a lot of boilerplate code (like user authentication, payment, connection to DB, connection to email account, integration with Docker, easy deployment to AWS/Heroku/DO, logging, etc.)
+                  </p>
                 </div>
 
-                <div class="post-preview">
-                  <div style="flex:15">
-                    <a href="#">
-                      <img src="https://lh3.googleusercontent.com/CuEfj955nT_eoHDAgH7m70-IpC4jFnN4XElxLr66N7TB1f8xInOfMpYPiDlG7Oxlw9eSl8zGmRLGme2TIGsxYfg7=s96-c" alt="" />
-                    </a>
-                    <p>
-                      <a class="text-green" href="#">Hello, I'm Andrew, in the process of founding Opplaud.com. Hello, I'm Andrew, in the process of founding Opplaud.com.</a>
-                      <br />
-                      <small>submitted by
-                        <a class="text-blue" href="#">Dkwon</a>
-                        <span>·</span>3 hours ago
-                        <span>·</span>10 comments
-                      </small>
-                    </p>
-                  </div>
-                  <div style="flex:1;text-align:right;max-width:30px;line-height:16px">
-                    <a href="#"><i class="sl sl-icon-arrow-up"></i></a>
-                    <div style="padding-right:2px">11</div>
-                    <a href="#"><i class="sl sl-icon-arrow-down"></i></a>
-                  </div>
-                </div>
 
 
   						</div>
