hide dashboard-nav in mobile view

--- a/views/forum.mustache
+++ b/views/forum.mustache
@@ -93,11 +93,10 @@
 <!-- Wrapper -->
 <div id="wrapper">
   {{>nav}}
-
   <div class="clearfix"></div>
 
   <div id="dashboard">
-  	<div class="dashboard-nav">
+  	<div class="dashboard-nav hidden-xs">
   		<div class="dashboard-nav-inner">
 
   			<ul data-submenu-title="Main">
