--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -69,8 +69,6 @@
   <div class="clearfix"></div>
 
   <div id="dashboard">
-  	<a href="#" class="dashboard-responsive-nav-trigger"><i class="fa fa-reorder"></i> Dashboard Navigation</a>
-
   	<div class="dashboard-nav">
   		<div class="dashboard-nav-inner">
 
@@ -117,42 +115,29 @@
                 <hr />
                 <div class="message-bubble margin-bottom-60">
   								<div class="message-avatar">
-                    <img style="width:44px;height:44px" src="http://www.gravatar.com/avatar/00000000000000000000000000000000?d=mm&amp;s=70" alt="" />
+                    <img id="reply-avatar" style="width:44px;height:44px" src="" alt="" />
                   </div>
                   <div class="message-text margin-left-60">
-                    <textarea placeholder="Enter your comment..."></textarea>
-                    <div style="text-align:right"><button class="button" style="padding:0px 9px;border-radius:3px;margin:0px">Submit Reply</button></div>
+                    <textarea id="input-reply-text" placeholder="Enter your comment..."></textarea>
+                    <div style="text-align:right"><button id="btn-submit-reply" class="button" style="padding:0px 9px;border-radius:3px;margin:0px">Submit Reply</button></div>
                   </div>
   							</div>
 
-                <div class="reply-box">
-                  <a href="#">
-                    <img src="https://lh3.googleusercontent.com/CuEfj955nT_eoHDAgH7m70-IpC4jFnN4XElxLr66N7TB1f8xInOfMpYPiDlG7Oxlw9eSl8zGmRLGme2TIGsxYfg7=s96-c" alt="" />
-                  </a>
-                  <small>
-                    by <a class="text-blue" href="#">Dkwon</a>
-                    <span>·</span>
-                    3 hours ago
-                  </small>
-                  <p class="margin-top-10">
-                    I’m guessing most of you who have developed tech products spent a good amount of time initially setting up the project and writing a lot of boilerplate code (like user authentication, payment, connection to DB, connection to email account, integration with Docker, easy deployment to AWS/Heroku/DO, logging, etc.)
-                  </p>
+                <div id="container-replies">
+                  {{#replies}}
+                  <div class="reply-box">
+                    <a href="/profile/{{profile.slug}}">
+                      <img src="{{{profile.image}}}=s96-c" alt="" />
+                    </a>
+                    <small>
+                      by <a class="text-blue" href="/profile/{{profile.slug}}">Dkwon</a>
+                      <span>·</span>
+                      {{dateString}}
+                    </small>
+                    <p class="margin-top-10">{{text}}</p>
+                  </div>
+                  {{/replies}}
                 </div>
-
-
-                <div class="reply-box">
-                  <img style="width:24px;border-radius:50%" src="https://lh3.googleusercontent.com/CuEfj955nT_eoHDAgH7m70-IpC4jFnN4XElxLr66N7TB1f8xInOfMpYPiDlG7Oxlw9eSl8zGmRLGme2TIGsxYfg7=s96-c" alt="" />
-                  <small>
-                    by <a class="text-blue" href="#">Dkwon</a>
-                    <span>·</span>
-                    3 hours ago
-                  </small>
-                  <p class="margin-top-10">
-                    I’m guessing most of you who have developed tech products spent a good amount of time initially setting up the project and writing a lot of boilerplate code (like user authentication, payment, connection to DB, connection to email account, integration with Docker, easy deployment to AWS/Heroku/DO, logging, etc.)
-                  </p>
-                </div>
-
-
 
   						</div>
   						<!-- Message Content -->
@@ -170,8 +155,85 @@
   </div>
 </div>
 
+<script type="text/template" id="tpl-reply">
+  <div class="reply-box">
+    <a href="/profile/<% profile.username %>">
+      <img src="<%{profile.image}%>=s96-c" alt="" />
+    </a>
+    <small>
+      by <a class="text-blue" href="/profile/<% profile.username %>"><% profile.username %></a>
+      <span>·</span>
+      <% dateString %>
+    </small>
+    <p class="margin-top-10"><% text %></p>
+  </div>
+</script>
 
   <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
   <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+  <script>
+    (function(){
+      Mustache.tags = ["<%", "%>"] // change delimiter so it doesn't conflict server side
+      var data = window.__PRELOADED__
+      var user = data.user
+      var comment = data.comment
+      var replies = data.replies || []
+      // console.log('USER == ' + JSON.stringify(user))
+
+      if (user != null){
+        $('#reply-avatar').attr('src', user.image+'=s120-c')
+
+      }
+
+      $('#btn-submit-reply').click(function(event){
+        if (event)
+          event.preventDefault()
+
+        if (user == null){
+          alert('Please log in or register to submit a reply.')
+          return
+        }
+
+        // no title required
+        var reply = {
+          profile: JSON.stringify({id:user.id, firstName:user.firstName, lastName:user.lastName, username:user.username, image:user.image, slug:user.slug}),
+          text: $('#input-reply-text').val(),
+          isInitial: 'no',
+          thread: comment.id
+        }
+
+        if (reply.text.length == 0){
+          alert('Please enter text for your reply')
+          return
+        }
+
+        $.ajax({
+          url: '/api/comment',
+          type: 'POST',
+          data: reply,
+          success: function(response){
+            if (response.confirmation != 'success'){
+              alert('Error - ' + response.message)
+              return
+            }
+
+            // console.log('REPLY CREATED: ' + JSON.stringify(response))
+            replies.unshift(response.result)
+            var tpl = $('#tpl-reply').html()
+            var repliesHtml = ''
+            replies.forEach(function(reply){
+              repliesHtml += Mustache.render(tpl, reply)
+            })
+
+            $('#container-replies').html(repliesHtml)
+          },
+          error: function(response){
+
+          }
+        })
+      })
+    })()
+  </script>
+
 </body>
 </html>
