--- a/views/forum.mustache
+++ b/views/forum.mustache
@@ -61,12 +61,13 @@
     .message-bubble textarea {
       font-size:14px;
       font-weight:200;
-      min-height:80px;
+      min-height:72px;
       resize:none;
       border:none;
       background:#f6f6f6;
       box-shadow:none;
       padding:0px;
+      margin-bottom: 0px !important;
     }
 
     .message-bubble button {
