--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -239,6 +239,7 @@
             })
 
             $('#container-replies').html(repliesHtml)
+            $('#input-reply-text').val('')
           },
           error: function(response){
 
