comment out console log

--- a/views/forum.mustache
+++ b/views/forum.mustache
@@ -197,7 +197,7 @@
     (function(){
       var data = window.__PRELOADED__
       var user = data.user
-      console.log('USER == ' + JSON.stringify(user))
+      // console.log('USER == ' + JSON.stringify(user))
 
       if (user != null){
         $('#comment-avatar').attr('src', user.image+'=s120-c')
