show date string for comments

--- a/views/forum.mustache
+++ b/views/forum.mustache
@@ -162,7 +162,7 @@
                       <small>
                         by
                         <a class="text-blue" href="/profile/{{profile.slug}}">{{profile.username}}</a>
-                        <span>·</span>3 hours ago
+                        <span>·</span>{{dateString}}
                         <span>·</span>10 comments
                       </small>
                     </p>
