change forum to community

--- a/views/community.mustache
+++ b/views/community.mustache
@@ -126,10 +126,7 @@
 
   				<div class="messages-container margin-top-0">
   					<div class="messages-headline">
-              <div class="layout-switcher" style="text-align:right">
-    						<a href="#" class="grid active"><i class="fa fa-th"></i></a>
-    						<a href="#" class="list"><i class="fa fa-align-justify"></i></a>
-    					</div>
+              <h4>FORUM</h4>
   					</div>
 
   					<div class="messages-container-inner">
