--- a/views/community.mustache
+++ b/views/community.mustache
@@ -99,7 +99,7 @@
 
     .comment-by small {
       color: #999;
-      font-weight: 200;
+      font-weight: 400;
       font-size: 12px;
     }
 
@@ -192,7 +192,7 @@
   						<!-- Message Content -->
 
               <section id="container-blog" class="message-content">
-      					<ul style="list-style-type:none">
+      					<ul style="list-style-type:none;padding-left:0px">
                   {{#posts}}
       						<li>
                     <div class="margin-bottom-60">
