sidebar nav header

--- a/views/community.mustache
+++ b/views/community.mustache
@@ -122,7 +122,7 @@
   	<div class="dashboard-nav hidden-xs">
   		<div class="dashboard-nav-inner">
 
-  			<ul data-submenu-title="Main">
+  			<ul data-submenu-title="Community">
   				<li id="sidebar-forum" class="active"><a href="#"><i class="sl sl-icon-bubbles"></i> Forum</a></li>
   				<li id="sidebar-blog"><a href="#"><i class="sl sl-icon-book-open"></i> Blog</a></li>
   			</ul>
