footer link to blog

--- a/views/partials/footer-dark.mustache
+++ b/views/partials/footer-dark.mustache
@@ -14,7 +14,7 @@
 					<li><a href="/?selected=faq">FAQ</a></li>
 					<li><a href="/templates">Templates</a></li>
 					<li><a href="/?selected=how+it+works">How It Works</a></li>
-					<li><a href="/blog">Blog</a></li>
+					<li><a href="/community?selected=blog">Blog</a></li>
 				</ul>
 				<div class="clearfix"></div>
 			</div>
