--- a/views/account.mustache
+++ b/views/account.mustache
@@ -59,9 +59,9 @@
             <nav id="navigation" class="style-1">
     					<ul id="responsive">
     						<li><a class="current" href="/">Home</a></li>
-    						<li><a id="nav-how-it-works" href="/?selected=how+it+works">How It Works</a></li>
+    						<li><a id="nav-how-it-works" href="/?selected=how+it+works">About</a></li>
                 <li><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="/community">Community</a></li>
   							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
     					</ul>
     				</nav>
