--- a/views/partials/footer-dark.mustache
+++ b/views/partials/footer-dark.mustache
@@ -13,8 +13,8 @@
 				<ul class="footer-links margin-top-30" style="width:100%">
 					<li><a href="/?selected=faq">FAQ</a></li>
 					<li><a href="/templates">Templates</a></li>
-					<li><a href="/?selected=how+it+works">How It Works</a></li>
-					<li><a href="/community?selected=blog">Blog</a></li>
+					<li><a href="/?selected=how+it+works">About</a></li>
+					<li><a href="/community">Community</a></li>
 				</ul>
 				<div class="clearfix"></div>
 			</div>
